feat: add chat room and chat member relationship for private chat
